chore(NavigationComponent.vue): update logo link in navigation component to point to the current page instead of index.html for better user experience chore(NavigationComponent.vue): update GitHub link in navigation component to point to the correct GitHub profile chore(NavigationComponent.vue): update email link in navigation component to use a mailto link for easier contact chore(_navigation.scss): remove unnecessary CSS properties and adjust styling for better alignment and readability

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -13,29 +13,23 @@
         display: flex;
         list-style: none;
         transition: all 0.2s ease;
-        place-content: center space-between;
         align-items: center;
 
         &__item {
-            padding-inline: .7em;
             font-size: 1rem;
-            
-            & .logo { color: #D70015; }
+            padding-inline: .7em;
 
             & a {
-                color: $c-white;
+                color: inherit;
                 text-decoration: none;
                 transition: all 0.2s ease;
+
+                &:hover { color: $c-brand-lighter; }
+
+                & ion-icon { font-size: 1.5rem; }
             }
             
-            & > *:hover { color: $c-brand-lighter; }
-            
-            &--2 { margin-left: auto; }
-            
-            & ion-icon {
-                font-size: 1.5rem;
-            }
+            &:first-child { color: $c-brand-darker; }
         }
     }
 }
-
